--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "flowbite": "^2.5.2",
+    "lucide-react": "^0.474.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
